--- a/spqr_kwitter/kwitter_app/templates/edit.html
+++ b/spqr_kwitter/kwitter_app/templates/edit.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action='edit' method='POST' enctype="multipart">
+    <form action='/edit/' method='POST' enctype="multipart/form-data">
         {% csrf_token %}
         <input type='file' name='docfile' required>
         <button>Upload</button>
